Changed get endpoint to be filtered be cities and technology