@@ -7,10 +7,12 @@ import pl.prim.eldorado.getoffers.dto.CityTechnologyOfferDto;
 import pl.prim.eldorado.getoffers.dto.OfferCountDto;
 import pl.prim.eldorado.model.stats.enums.City;
 import pl.prim.eldorado.model.stats.JobOfferStatistics;
+import pl.prim.eldorado.model.stats.enums.ExperienceLevel;
 import pl.prim.eldorado.model.stats.enums.Technology;
 import pl.prim.eldorado.fetchoffers.JobOfferStatisticsRepository;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,26 +26,27 @@ class GetJobOffersService {
         this.repository = repository;
     }
 
-    List<OfferCountDto> getAll() {
-        if(log.isDebugEnabled()){
-            for (JobOfferStatistics jos : repository.findAll()) {
-                log.debug(jos.toString());
-            }
-        }
+    public List<CityTechnologyOfferDto> getFilteredOffers(City city, Technology technology) {
+        // Input validation
+        Objects.requireNonNull(city, "City cannot be null");
+        Objects.requireNonNull(technology, "Technology cannot be null");
 
-        return repository.findAll().stream()
-                .map(OfferCountDto::from)
-                .collect(Collectors.toList());
+        List<JobOfferStatistics> statistics = repository.findByCityAndTechnology(city, technology);
+
+        return statistics.stream()
+                .map(CityTechnologyOfferDto::from)
+                .sorted(this::compareOffers)
+                .toList();
     }
 
-    List<CityTechnologyOfferDto> getOffersWithLevels() {
-        List<CityTechnologyOfferDto> cityTechnologyOfferDtos = repository
-                .findByCityAndTechnology(City.ALL, Technology.ALL)
-                .stream()
-                .map(CityTechnologyOfferDto::from)
-                .toList();
+    private int compareOffers(CityTechnologyOfferDto a, CityTechnologyOfferDto b) {
+        int dateCompare = b.fetchDate().compareTo(a.fetchDate());
+        if (dateCompare != 0) return dateCompare;
 
-        return cityTechnologyOfferDtos;
+        int cityCompare = a.city().compareTo(b.city());
+        if (cityCompare != 0) return cityCompare;
+
+        return a.technology().compareTo(b.technology());
     }
 }
 
